fixed responsive on tablet

--- a/assets/sass/_landing.scss
+++ b/assets/sass/_landing.scss
@@ -563,6 +563,9 @@
     @include mobile{
         height: 100vh;
     }
+    @include tablet{
+        height: 75vh;
+    }
     .item {
         width: 50%;
         margin: 0 auto;
